update [add blog doc]
