# routes/api.php
@@ -11,10 +11,6 @@ Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanc
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/blogs', [BlogController::class, 'store']);
-    // Route::get('/blogs', [BlogController::class, 'index']);
-    // Route::get('/blogs/{blog}', [BlogController::class, 'show']);
-    // Route::put('/blogs/{blog}', [BlogController::class, 'update']);
-    // Route::delete('/blogs/{blog}', [BlogController::class, 'destroy']);
 });
 
 // Route::get('/user', function (Request $request) {
